# bulletproofs

./: CHANGELOG.md  Cargo.toml  README.md
benches/: generators.rs  linear_proof.rs  r1cs.rs  range_proof.rs
docs/: r1cs-docs-example.md
src/: inner_product_proof.rs  lib.rs  linear_proof.rs  transcript.rs  util.rs
src/r1cs/: prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
