[package]
name = "bulletproofs"
# Before doing a release:
# - update version field
# - update html_root_url
# - update CHANGELOG
version = "5.0.2"
authors = ["Cathie Yun <cathieyun@gmail.com>",
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/xelis-project/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = { features = ["digest", "group", "rand_core", "serde", "zeroize", "alloc", "std", "precomputed-tables"], default-features = false, git = "https://github.com/xelis-project/curve25519-dalek", branch = "master" }
group = { version = "=0.14.0-pre.0", default-features = false, optional = true }
subtle = { version = "2.6", default-features = false }
sha3 = { version = "0.11.0-rc.0", default-features = false }
digest = { version = "0.11.0-rc.0", default-features = false }
rand_core = { version = "0.9", default-features = false }
rand = { version = "0.9", optional = true }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"] }
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
zeroize = "1.8.1"

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.9"
curve25519-dalek = { features = ["digest", "group", "legacy_compatibility", "rand_core", "serde", "zeroize", "std", "alloc", "precomputed-tables"], default-features = false, git = "https://github.com/xelis-project/curve25519-dalek", branch = "master" }
serde_json = "1"
rand_core = { version = "0.9", default-features = false, features = ["os_rng"] }
rand = "0.9"

[features]
default = ["std"]
yoloproofs = []
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
nightly = ["subtle/nightly"]
docs = ["nightly"]


[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "range_proof"
harness = false

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs"]

[[bench]]
name = "linear_proof"
harness = false
